--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-firebase/app": "^17.3.1",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.5",
+    "@react-navigation/native-stack": "^6.9.11",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-gifted-chat": "^1.1.1",
