--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^17.3.1",
+    "@react-native-firebase/auth": "^17.3.1",
+    "@react-native-firebase/firestore": "^17.3.1",
+    "@react-native-firebase/storage": "^17.3.1",
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
+    "dotenv": "^16.0.3",
+    "firebase": "^9.17.1",
+    "path": "^0.12.7",
     "react": "18.2.0",
     "react-native": "0.71.3",
+    "react-native-config": "^1.5.0",
     "react-native-gifted-chat": "^1.1.1",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.20.0",
@@ -35,6 +42,7 @@
     "jest": "^29.2.1",
     "metro-react-native-babel-preset": "0.73.7",
     "prettier": "^2.4.1",
+    "react-native-dotenv": "^3.4.8",
     "react-test-renderer": "18.2.0",
     "typescript": "4.8.4"
   },
