--- a/package.json
+++ b/package.json
@@ -17,16 +17,28 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/native": "^6.1.5",
     "@react-navigation/native-stack": "^6.9.11",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "firebase": "^9.17.1",
+    "md5": "^2.3.0",
+    "mime": "^3.0.0",
+    "moment": "^2.29.4",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-native": "0.71.3",
     "react-native-config": "^1.5.0",
+    "react-native-fs": "^2.20.0",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-gifted-chat": "^1.1.1",
+    "react-native-image-picker": "^5.1.0",
+    "react-native-paper": "^5.2.0",
+    "react-native-reanimated": "^3.0.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "^3.20.0",
-    "react-native-vector-icons": "^9.2.0"
+    "react-native-svg": "^13.8.0",
+    "react-native-uuid": "^2.0.1",
+    "react-native-vector-icons": "^9.2.0",
+    "reanimated-bottom-sheet": "^1.0.0-alpha.22"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
